fix profile overflow

--- a/app/styles/app/layouts/profile.sass
+++ b/app/styles/app/layouts/profile.sass
@@ -1,6 +1,7 @@
 .profile-page
   clear: both
-  overflow: auto
+  overflow-y: auto
+  overflow-x: hidden
 
 .profile-main
   padding: 0 $column-gutter/2
